--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </center>
 
     <div class="copy_right_footer">
-        Developed by - Peter
+        Developed by - Krisztian
       </div>
     <script src="main.js"></script>
 </body>
